syntax = "proto3";

package user.v1;

option go_package = "github.com/norbybaru/go-proto-buf/gren/go/user/v1;userpb";

import "user/v1/user.proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
}

message GetUserRequest {
  string uuid       = 1;
  string first_name = 2;
  string last_name  = 3;
}

message GetUserResponse {
  User user = 1;
}
